--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "music-profiling",
+  "name": "music-profiling-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start-ts": "node dist/app.js",
+    "start-ts": "tsc && node dist/app.js",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.4",
+    "axios": "^1.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
