--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.0.0",
     "morgan": "~1.9.1"
   }
 }
